package com.softdevsix.argos.repository;

import com.softdevsix.argos.domain.BestPractices;
import org.springframework.data.repository.CrudRepository;

/**
 * BestPracticesRepository
 */
public interface BestPracticesRepository extends CrudRepository<BestPractices, Integer> {}
